2000-09-11  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Preset Output Variables): Correctly specify
	what languages are affected by CPPFLAGS, LDFLAGS and LIBS.
	Extended description of LDFLAGS and LIBS.
	(Compilers and Preprocessors, C Compiler Characteristics):
	Recommend Automake as the source of ansi2knr.
	(Autoconf Language, Quotation and Nested Macros): English fixes.
	(Quotation and Nested Macros): Unclear example replaced with
	an explanation of when m4 expands quotes. Added explanation why
	unquoted calls are dangerous.

2000-09-08  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi: Always use one space before the opening
	parenthesis in @defmac

2000-09-06   Morten Eriksen  <mortene@sim.no>

	* acspecific.m4 (_AC_OBJEXT): No longer use AC_COMPILE_IFELSE,
	which uses $ac_objext hence depends upon _AC_OBJEXT.
	* aclang.m4 (AC_PROG_CC, AC_PROG_CXX, AC_PROG_F77): Call
	_AC_OBJEXT before _AC_EXEEXT since the latter needs $ac_objext.

2000-09-06  Bernard Dautrevaux  <dautrevaux@objectlive.com>

	* acspecific.m4 (_AC_EXEEXT): Set extension to void if linking
	creates both an unsuffixed file and suffixed ones.

2000-09-06  Peter Eisentraut  <peter_e@gmx.net>

	* autoconf.texi: English and typo fixes.

2000-09-05  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: Consider undefined macros as errors.
	* tests/base.m4 (unexpanded macros): Expect error, not warning

2000-09-05   Dave Love  <fx@gnu.org>

	* aclang.m4 (_AC_PROG_F77_GNU): Run command from standard input so
	that we can get some standard output.

2000-09-04  Peter Eisentraut  <peter_e@gmx.net>

	* autoscan.pl: Repair broken Getopt::Long use.

2000-09-04  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump version to 2.49b.
	* Makefile.am (bin_SCRIPTS): Depend upon configure.in.

2000-08-11  Akim Demaille  <akim@epita.fr>

	Version 2.49a.

2000-08-11  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_NO_EXECUTABLES): New macro.

2000-08-11  Akim Demaille  <akim@epita.fr>
